<resources>
    <string name="app_name">Best Buy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="backdrop_title">BEST BUY</string>
    <string name="backdrop_subtitle">Ache e Compre aqui!</string>

    <string name="action_add_detalhes">Detalhes</string>
    <string name="action_add_comprar">Comprar</string>
    <string name="action_add_remover">Remover</string>
    <string name="action_finalizar">Finalizar Compra</string>

    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="action_add">Adcionar</string>
    <string name="text_view_desc">Descrição</string>
    <string name="spinner_qtde">Quantidade:</string>

    <!-- layout screen default login -->
    <string name="titlelogo">BestBuyDeveloper by MAIN</string>
    <string name="strLyLoginHintInputEmail">Email</string>
    <string name="strLyLoginHintInputPassword">Password</string>
    <string name="strLyLoginButtonLogin">Login</string>
    <string name="strLyLoginTextViewAccount">Cadastre-se aqui!</string>

    <string name="strLyLoginUserNameError">Entre com o nome do usuário</string>
    <string name="strLyLoginPassWordError">Entre com a senha do usuário</string>
    <string name="strLyLoginloginfailed">Falha no login</string>
    <string name="strLyLoginUsername_error">Falha no nome</string>
    <string name="strLyLoginPassword_error">Falha na senha</string>
    <string name="strLyLoginStatusloginok">Sucesso no Login</string>


    <string name="str_id_carro_error">Não foi possível recuperar o ID do Carro!</string>

    <!-- parametros DAO -->
    <string name="folder">"/CARRO_DESENV/"</string>
    <string name="folderError">Folder CARRO_DESENV indisponível</string>


    <!-- tabelas -->
    <string name="dsNameTblUser">Usuario</string>
    <string name="sqlAlterTblUsuario">ALTER TABLE Usuarios ADD COLUMN XYZ TEXT</string>
    <string name="dsNomeTblUser">dsNome</string>
    <string name="dsLoginTblUser">dsLogin</string>
    <string name="dsSenhaTblUser">dsSenha</string>
    <string name="idTblUser">idUsuario</string>
    <string name="namePhoto">namePhoto</string>
    <string name="bytePhoto">bytePhoto</string>

    <string name="sqlCreateTableUsuario">
        CREATE TABLE Usuario (idUsuario INTEGER PRIMARY KEY AUTOINCREMENT, dsNome TEXT, dsLogin TEXT, dsSenha TEXT, namePhoto TEXT, bytePhoto Blob);
    </string>

    <string name="sqlCreateTableCarro">
        CREATE TABLE Carro (id INTEGER PRIMARY KEY AUTOINCREMENT, nome TEXT, descricao TEXT, marca TEXT, quantidade INTEGER, preco FLOAT, imagem TEXT);
    </string>

    <string name="sqlCreateTablePedio">
        CREATE TABLE Pedido (idPedido INTEGER PRIMARY KEY AUTOINCREMENT, dataHora INTEGER, dsDataHora TEXT, total DOUBLE, idUsuario INTEGER, FOREIGN KEY (idUsuario) REFERENCES Usuario(idUsuario));
    </string>

    <string name="sqlCreateTableItemPedido">
        CREATE TABLE ItemPedido (idPedido INTEGER, idCarro INTEGER, precoUnitario DOUBLE, quantidade INTEGER, precoTotal DOUBLE, dsPojoToGson TEXT, PRIMARY KEY (idPedido, idCarro));
    </string>


    <!-- alertas -->

    <string name="errorDbCreateMemoriaInterna">NÃO FOI POSSÍVEL CRIAR O BANCO NA MEMÓRIA INTERNA. Error em: MySQLiteOpenHelper</string>
    <string name="errorDbWriteMemoriaInterna">NÃO FOI POSSÍVEL ESCREVER O BANCO NA MEMÓRIA INTERNA. Error em: getWritableDatabase</string>
    <string name="sucessDbInterno">Banco interno criado com sucesso!</string>

    <string name="errorCreateFolderExterna">Error ao criar o FOLDER</string>
    <string name="errorDbCreateMemoriaExterna">NÃO FOI POSSÍVEL CRIAR O BANCO NO SDCARD. Error em: MySQLiteOpenHelper</string>
    <string name="errorDbWriteMemoriaExterna">NÃO FOI POSSÍVEL ESCREVER O BANCO NO SDCARD. Error em: getWritableDatabase</string>
    <string name="sucessDbExterno">Banco externo criado com sucesso!</string>


    <!-- mensagens -->
    <string name="str_SimpleDateFormat">MMM dd,yyyy HH:mm</string>
    <string name="str_atencao">Atenção</string>
    <string name="str_infoPermissao">É necessária para o funcionamento do sistema!  Favor ir em configurações, selecionar o app e adicionar as permissões negada!</string>
    <string name="str_finalizar">Finalizar</string>
    <string name="str_infoPermissaoNeverAgain">Você só poderá usar o sistema habilitando a permissão em configurações, selecionar o app e adicionar as permissão negada!</string>


    <!-- conexão -->
    <string name="title_msg_conection">Atenção</string>
    <string name="desc_msg_conection">Conecte-se à Internet!</string>
    <string name="opt_msg_conection">OK</string>

    <!-- strings consome endPoint -->
    <string name="research_error_parameter">Parâmetro inválido! </string>
    <string name="research_error_busca">Não foi possível efetuar a busca! </string>


    <string name="name_car">BMW 120i Sport</string>
    <string name="key_detalhe">detalhe</string>

    <string name="marca">MARCA</string>
    <string name="modelo">MODELO</string>
    <string name="preco">PREÇO</string>
    <string name="qtde">QTDE</string>

    <string name="itemPedidoGetPrecoUnitarioError">Error na recuperação do preço unitário.</string>
    <string name="itemPedidoGetPrecoTotalError">Error na recuperação do preço total.</string>
    <string name="itemPedidoGetQtdeError">Error na recuperação da quantidade.</string>
    <string name="itemPedidoGetDataHoraError">Error na recuperação da Data Hora.</string>
    <string name="itemPedidoGetDsDataHoraError">Error na recuperação da Ds Data Hora.</string>
    <string name="itemPedidoGetIdUsuarioError">Error na recuperação do id do Usuário.</string>
    <string name="itemPedidoGetIdPedidoError">Error na recuperação do id do Pedido.</string>
    <string name="dsCompraSuperior">A solicitação supera o limite permitido de 100.000,00.</string>
    <string name="itemPedidoGetCarroError">Error na recuperação do Objeto new Carro()</string>
    <string name="showErrorItemPedido">Ocoreu um error ao tentar salvar o dado!</string>
    <string name="itemGetPojoToGsonError">Error no processamento Pojo to GSON.</string>

    <string name="keyPrecoUnitarioCarro">keyPrecoUnitarioCarro</string>
    <string name="keyQtdeCarro">keyQtdeCarro</string>
    <string name="keyDataHoraCarro">keyDataHoraCarro</string>
    <string name="keyDsDataHoraCarro">keyDsDataHoraCarro</string>
    <string name="keyIdUsuario">keyIdUsuario</string>
    <string name="keyGsonCarro">keyGsonCarro</string>

    <!-- tabela ItemPedido-->
    <string name="tblNameItensPedido">ItemPedido</string>
    <string name="idPedidoItemPedido">idPedido</string>
    <string name="idCarroItemPedido">idCarro</string>
    <string name="precoUnitarioItemPedido">precoUnitario</string>
    <string name="quantidadeItemPedido">quantidade</string>
    <string name="precoTotalItemPedido">precoTotal</string>
    <string name="dsPojoToGson">dsPojoToGson</string>

    <!-- tabela Pedido-->
    <string name="idPedidoPedido">idPedido</string>
    <string name="dataHoraPedido">dataHora</string>
    <string name="dsDataHoraPedido">dsDataHora</string>
    <string name="totalPedido">total</string>
    <string name="idUsuarioPedido">idUsuario</string>

    <!-- tabela Carro-->
    <string name="tblNameCarro">Carro</string>
    <string name="idCarro">id</string>
    <string name="nomeCarro">nome</string>
    <string name="dsCarro">descricao</string>
    <string name="marcaCarro">marca</string>
    <string name="quantidadeCarro">quantidade</string>
    <string name="precoCarro">preco</string>
    <string name="imagemCarro">imagem</string>

    <!--Preferences Carro -->
    <string name="filePrefJsonCar">filePrefJsonCar</string>
    <string name="valuePrefJsonCar">valuePrefJsonCar</string>
    <string name="flagPrefCarro">flagPrefCarro</string>

    <!--Preferences Usuário -->
    <string name="filePrefJsonUser">filePrefJsonUser</string>
    <string name="flagPrefUsuario">flagPrefUsuario</string>

    <!--Preferences Pedido -->
    <string name="filePrefJsonPed">filePrefJsonPed</string>
    <string name="flagPrefPedido">flagPrefPedido</string>



    <string name="alertTitulo">Atenção!</string>
    <string name="alertMsg">Deseja finalizar?</string>
    <string name="alertPositivo">SIM</string>
    <string name="alertNegativo">NÃO</string>
</resources>