<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:ignore="ContentDescription">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:contentDescription="blablablabla"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@drawable/car" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="0dp"
                android:layout_height="14dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar_image"
                app:layout_constraintTop_toTopOf="@+id/avatar_image" />

            <TextView
                android:id="@+id/subtitle_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="12dp"
                android:text="@string/subhead"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar_image" />

            <ImageView
                android:id="@+id/media_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/car"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescricao"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

            <TextView
                android:id="@+id/textViewDescricao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/text_view_desc"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media_image" />


            <Spinner
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/spinner_qtde"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescricao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:popupBackground="@color/viewBg"/>

            <ImageView
                android:id="@+id/imageViewAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="288dp"
                android:minWidth="0dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/action_add"
                android:src="@drawable/buy_icon"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescricao"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
    </ScrollView>